## Process this file with automake to produce Makefile.in

SUBDIRS = src tests examples

DIST_SUBDIRS = src tests examples

include_HEADERS = swarm_config.h

CLEANFILES = *~ 
MAINTAINERCLEANDIRS  = autom4te.cache
MAINTAINERCLEANFILES = libtool swarm_config.h.in

## use this variable to include non-standard files in the distribution
EXTRA_DIST=autogen.sh
